[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/scan.gd" id=1]

[node name="Scan" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Label" type="Label" parent="VBox"]
text = "Scan (MVP stub)"

[node name="CaptureButton" type="Button" parent="VBox"]
unique_name_in_owner = true
text = "Capture"

[node name="PickButton" type="Button" parent="VBox"]
unique_name_in_owner = true
text = "Pick Image (Desktop)"

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
text = ""

[node name="FileDialog" type="FileDialog" parent="."]
access = 2
file_mode = 1
filters = ["*.jpg ; JPEG Images", "*.jpeg ; JPEG Images", "*.png ; PNG Images"]
